# Programmierung-und-Datenbanken

./: .buildinfo  .gitconfig  .gitignore  .gitlab-ci.yml  .gitmodules  ImmutablePoint.py  README.html  README.md  _config.yml  _quarto_internal_scss_error.scss  _toc.yml  autodeploy.sh  book.yaml  build.bat  build.sh  conf.py  environment-lehre.yml  environment-lehre4.yml  genindex.html  intro.html  intro.md  intro_en.md  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  references.bib  requirements-dev.txt  requirements.txt  search.html  searchindex.js  serve.bat  serve.sh  tasks.py  toc_translations.json
Vorlesung/: 01b_Anwendungen.html  01c_Computerhardware.html  01d_Programmiersprachen.html  01d_Programmiersprachen.md  01d_Softwarearchitektur.html  01d_Softwarearchitektur.md  01e_Programmiersprachen.html  01e_Programmiersprachen.md  01e_Softwarearchitektur.html  01e_Softwarearchitektur.md  02a_Wissenspyramide.html  02a_Wissenspyramide.md  02aq_Quiz_Wissenspyramide.html  02aq_Quiz_Wissenspyramide.md  02b_Datentypen.html  02bq_Quiz_Datentypen.html  02bq_Quiz_Datentypen.md  02c_Operatoren.html  02cq_Quiz_Logik.html  02cq_Quiz_Logik.md  03a_Verzweigung.html  03b_Schleifen.html  04a_Funktionen.html  04a_Funktionen.ipynb  04b_Rekursion.html  04b_Rekursion.ipynb  04c_Objects.html  05a_Programmablauf.html  05b_Algorithmen.html  05b_Algorithmen.ipynb  06a_Exceptions.html  06b_UnitTest.html  06c_Debugging.html  06c_Debugging.ipynb  07a_Module.html  07a_Module.ipynb  10_Datenbanken.html  10_Datenbanken.ipynb  11_Datenbankentwurf.html  11_Datenbankentwurf.ipynb  (+75 more)
_images/: partA.afpub  pd_logo2.afpub
_sources/: README.md  intro.md  markdown-notebooks.ipynb
_static/: style.css
lec_slides/: 01_Jupyter_Notebook.slides.html  01a_Ueberblick.slides.html  01a_Ueberblick_en.slides.html  01c_Computerhardware.slides.html  01c_Computerhardware_en.slides.html  01d_Programmiersprachen.slides.html  01d_Programmiersprachen_ani.slides.html  01d_Programmiersprachen_ani_en.slides.html  (+54 more)
(+580 files in other folders)
