[project]
name = "programmieruebung"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "furo>=2025.7.19",
    "ghp-import>=2.1.0",
    "jupyter>=1.1.1",
    "jupyter-book>=1.0.4.post1",
    "jupyterlab-myst>=2.4.2",
    "jupyterlab-rise>=0.43.1",
    "jupyterlab-rise-metadata-form>=1.0.1",
    "nbconvert>=7.16.6",
    "pyppeteer>=2.0.0",
    "rise>=5.7.1",
    "sphinx-proof>=0.2.1",
    "sphinxcontrib-mermaid>=1.0.0",
    "sphinxcontrib-quizdown",
    "termcolor>=3.1.0",
]

[tool.uv.sources]
sphinxcontrib-quizdown = { git = "https://github.com/bonartm/sphinxcontrib-quizdown" }

[dependency-groups]
dev = [
    "furo>=2025.7.19",
    "ghp-import>=2.1.0",
    "invoke>=2.2.0",
    "jupyter-book>=1.0.4.post1",
    "jupyterlab-myst>=2.4.2",
    "nbconvert>=7.16.6",
    "pyppeteer>=2.0.0",
    "sphinx-proof>=0.2.1",
    "sphinxcontrib-mermaid>=1.0.0",
    "sphinxcontrib-quizdown",
    "termcolor>=3.1.0",
]
